# media_server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_CN.md
.github/workflows/: build-base.yml  build-https.yml  build-rtc.yml  docker-publish.yml
output/: start.sh  stop.sh
output/conf/: config.json
output/web/: index.html  script.js  style.css
src/: MediaServer.cpp  MsDbMgr.cpp  MsDbMgr.h  MsDevMgr.cpp  MsDevMgr.h  MsFileSource.cpp  MsFileSource.h  MsGbServer.cpp  MsGbServer.h  MsGbServerHandler.cpp  MsGbServerHandler.h  MsGbSource.cpp  MsGbSource.h  MsHttpHandler.cpp  MsHttpHandler.h  MsHttpServer.cpp  MsHttpServer.h  MsHttpSink.cpp  MsHttpSink.h  MsHttpStream.cpp  MsHttpStream.h  MsJtHandler.cpp  MsJtHandler.h  MsJtServer.cpp  MsJtServer.h  MsJtSource.cpp  MsJtSource.h  MsMediaSink.cpp  MsMediaSink.h  MsMediaSource.cpp  MsMediaSource.h  MsMsgDef.h  MsOnvifHandler.cpp  MsOnvifHandler.h  MsResManager.cpp  MsResManager.h  MsRtcServer.cpp  MsRtcServer.h  MsRtcSink.cpp  MsRtcSink.h  (+16 more)
src/base/: MsAmf.cpp  MsAmf.h  MsApp.cpp  MsApp.h  MsCommon.cpp  MsCommon.h  MsConfig.cpp  MsConfig.h  MsEvent.cpp  MsEvent.h  MsHttpMsg.cpp  MsHttpMsg.h  MsInetAddr.cpp  MsInetAddr.h  MsLog.cpp  MsLog.h  MsMd5.c  MsMd5.h  MsMsg.h  MsOsConfig.h  MsPortAllocator.cpp  MsPortAllocator.h  MsReactor.cpp  MsReactor.h  MsRingBuffer.cpp  MsRingBuffer.h  MsRtspMsg.cpp  MsRtspMsg.h  MsSha1.cpp  MsSha1.h  MsSipMsg.cpp  MsSipMsg.h  MsSocket.cpp  MsSocket.h  MsSslSock.cpp  MsSslSock.h  MsThreadPool.cpp  MsThreadPool.h  MsTimer.cpp  MsTimer.h
tests/: whep_client.html  whip_client.html
web/: index.html  script.js
